--- a/kbk-react/package.json
+++ b/kbk-react/package.json
@@ -6,10 +6,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "google-maps-react-markers": "^2.0.8",
+    "mapbox-gl": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-map-gl": "^7.1.7",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
