--- a/kbk-react/package.json
+++ b/kbk-react/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "google-maps-react-markers": "^2.0.8",
+    "mapbox-gl": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-social-icons": "^6.10.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
