--- a/kbk-react/package.json
+++ b/kbk-react/package.json
@@ -14,7 +14,7 @@
     "react-icons": "^4.12.0",
     "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.21.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-social-icons": "^6.10.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
